@@ -102,7 +102,6 @@ public enum Preferences {
 	SHOW_STATUS_BAR, 
 	SHOW_SYSTEM_TRAY, 
 	SHOW_TICKS, 
-	SHOW_TITLE, 
 	SHOW_TRAY_PLAYER, 
 	SHUFFLE, 
 	SIMILAR_ARTISTS_MODE,
