@@ -34,6 +34,7 @@ aTunes 2.1.0
 - Nimbus look and feel removed as it does not support all features needed (font size?)
 - Return to simple context panel components layout, removing JXTaskPane (not fully look-and-feel compliance)
 - Disable plugin api validation [ patch by Laurent Cathala ]
+- New splash screen
 
 - FIX: Dialogs opened from preferences dialog use wrong parent [ patch by Laurent Cathala ]
 - FIX: Exception during renaming of file name
